# RHOgine

./: CMakeLists.txt  LICENSE.txt  README.md  main-test.cpp
Example Projects/Pong/: game.lua  objects.json
Example Projects/Pong/LICENSES/: LICENSE_SANSATION_FONT.txt
Example Projects/Pong/objects/: background.json  ball.json  gameLogic.json  mainMenu.json  paddle.json  ui.json
Example Projects/Pong/scripts/: background.lua  ball.lua  class.lua  gameLogic.lua  globals.lua  mainMenu.lua  paddle.lua  ui.lua
Example Projects/Shaders/: fragment.frag  game.lua  inverse.frag  sepia.frag  vertex.vert
Example Projects/Shaders/resources/: spineboy.atlas  spineboy.json  spineboy_mix.json
Example Projects/Shaders/scripts/: jasmine.lua
JSON/: license.txt
RHOgine/: FirstComeSingleton.h  GameObjects.h  Graphics.h  HashString.cpp  HashString.h  Input.h  RHOStrings.h  RHOgine.cpp  RHOgine.h  Scripting.h  Variant.h  defines.cpp  defines.h
RHOgine/Audio/: Audio.cpp  Audio.h
RHOgine/Console/: BaseConsole.cpp  BaseConsole.h  HelpCommand.cpp  HelpCommand.h  IConsole.h  IConsoleCommand.h  MiscCommands.cpp  MiscCommands.h  SFMLDrawableConsole.cpp  SFMLDrawableConsole.h
RHOgine/EventManager/: BaseEventListener.cpp  BaseEventListener.h  Event.cpp  Event.h  EventManager.cpp  EventManager.h  IEventListener.h
RHOgine/GameObjectFactory/: GOFactoryManager.cpp  GOFactoryManager.h  IGameObjectFactory.h  LuaGameObjectFactory.cpp  LuaGameObjectFactory.h
RHOgine/GameObjects/: GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  ITransformable.h  InterfaceManager.h  LuaGameObject.cpp  LuaGameObject.h
RHOgine/Graphics/: Camera.cpp  Camera.h  DrawManager.cpp  DrawManager.h  FontManager.cpp  FontManager.h  ISFMLDrawable.h  Particle.h  SpineAnimation.cpp  SpineAnimation.h  TextureManager.cpp  TextureManager.h  TileSystem.cpp  TileSystem.h
RHOgine/Input/: IInputHandler.h  InputCOR.cpp  InputCOR.h  SFMLInput.cpp  SFMLInput.h
RHOgine/Logic/: IUpdateable.h  LogicManager.cpp  LogicManager.h
RHOgine/Scene/: Scene.cpp  Scene.h
RHOgine/Script/: LuaAudio.cpp  LuaAudio.h  LuaCamera.cpp  LuaCamera.h  LuaDoFileCommand.cpp  LuaDoFileCommand.h  LuaDrawableRect.cpp  LuaDrawableRect.h  LuaEvent.cpp  LuaEvent.h  LuaGOFactoryManager.cpp  LuaGOFactoryManager.h  LuaGame.cpp  LuaGame.h  LuaHashString.cpp  LuaHashString.h  LuaRenderTarget.cpp  LuaRenderTarget.h  LuaScene.cpp  LuaScene.h  LuaShader.cpp  LuaShader.h  LuaSpine.cpp  LuaSpine.h  LuaSprite.cpp  LuaSprite.h  LuaState.cpp  LuaState.h  LuaText.cpp  LuaText.h  LuaWindow.cpp  LuaWindow.h  lua_helpers.cpp  lua_helpers.h
RHOgine/doc/: mainpage.dox  singletons.dox
SFML/examples-bin/: CMakeCache.txt
Spine/Include/spine/: Event.h
